--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://localhost:3306/mydb
+#spring.datasource.username=root
+#spring.datasource.password=8JPkd2uuKHLdwrRgPYDQ
+
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/mydb
+spring.datasource.url=jdbc:mysql://localhost:3306/newwebsite
 spring.datasource.username=root
 spring.datasource.password=8JPkd2uuKHLdwrRgPYDQ
 
