--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,17 @@
-#spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=jdbc:mysql://localhost:3306/mydb
-#spring.datasource.username=root
-#spring.datasource.password=8JPkd2uuKHLdwrRgPYDQ
-
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/newwebsite
+spring.datasource.url=jdbc:mysql://localhost:3306/new_schema
 spring.datasource.username=root
 spring.datasource.password=8JPkd2uuKHLdwrRgPYDQ
 
+jwt.secret: 'sdfdfdjoidjw48392u34rWDF#@t%$^45reuiaj2$'
+
+## SSL
+server.port=8443
+server.ssl.key-store=classpath:myKeystore.p12
+server.ssl.key-store-password=tedi2021
+
+# JKS or PKCS12
+server.ssl.keyStoreType=PKCS12
+
+## Spring Security
+## security.require-ssl=true
